--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <title>Ghibli Collection</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
+      <input type="text" id="searchbox" placeholder="Buscar películas">
+    </header>
+    <div id="sortBy"></div>
+    <div id="filters"></div>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
+    <footer></footer>
   </body>
 </html>
