--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
     </header>
     <div id="sortBy"></div>
     <div id="filters"></div>
-    <div id="root"></div>
+    <div id="root">
+      <h1>
+      </h1>
+      <img>
+    </div>
     <script src="main.js" type="module"></script>
     <footer></footer>
   </body>
