--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Ghibli Collection</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
-      <input type="text" id="searchbox" placeholder="Buscar películas">
+      <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo" />
+      <input type="text" id="searchbox" placeholder="Buscar películas" />
     </header>
     <div id="sortBy"></div>
     <div id="filters"></div>
     <div id="root">
-      <h1>
-      </h1>
-      <img>
+<!--       <div class="card">
+        <h1 class="movieName"></h1>
+        <img src="" alt="" />
+        <button class=""></button>
+      </div> -->
     </div>
     <script src="main.js" type="module"></script>
     <footer></footer>
