--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ghibli Collection</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
-      <input type="text" id="searchbox" placeholder="Buscar películas">
-    </header>
-    <div id="sortBy"></div>
-    <div id="filters"></div>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
-    <footer></footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Ghibli Collection</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,700&display=swap"
+    rel="stylesheet">
+</head>
+<body>
+  <header>
+    <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
+    <input type="text" id="searchbox" placeholder="Buscar películas">
+  </header>
+  <div id="sortBy"></div>
+  <div id="filters"></div>
+  <div id="root"></div>
+  <script src="main.js" type="module"></script>
+  <footer></footer>
+</body>
 </html>
