--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Ghibli Collection</title>
@@ -10,15 +11,23 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,700&display=swap"
     rel="stylesheet">
 </head>
+
 <body>
   <header>
     <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
     <input type="text" id="searchbox" placeholder="Buscar películas">
   </header>
-  <div id="sortBy"></div>
+  <div id="sortBy">
+    <select id="sortingMenu">
+      <option id="blankId" value="intro">Ordenar por:</option>
+      <option id="aToZ" value="AZ">Ascendente: de la A a la Z</option>
+      <option id="zToA" value="ZA">Descendente: de la Z a la A</option>
+    </select>
+  </div>
   <div id="filters"></div>
   <div id="root"></div>
   <script src="main.js" type="module"></script>
   <footer></footer>
 </body>
+
 </html>
