se añadió director

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <option id="20" value="00s">2000 a la actualidad</option>
       </select></p>
     <p><select id="filmdirector" class="filters">
-        <option id="year" value="releaseyear">Director</option>
+        <option id="year" value="moviedirector">Director</option>
         <option id="Hayao" value="Hayao">Hayao Miyazaki</option>
         <option id="Isao" value="Isao">Isao Takahata</option>
         <option id="Yoshifumi" value="Yoshifumi">Yoshifumi Kondō</option>
