--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <option id="zToA" value="ZA">Descendente: de la Z a la A</option>
     </select>
   </div>
-  <div id="filters">
+  <div id="filterButtons">
     <p>Filtros</p>
     <p><select id="movieyears" class="filters">
         <option id="year" value="releaseyear">Año de lanzamiento</option>
