--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ghibli Collection</title>
+  <title>Studio Ghibli Collection</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,8 +24,25 @@
       <option id="zToA" value="ZA">Descendente: de la Z a la A</option>
     </select>
   </div>
-  <div id="filters"></div>
-  <div id="root"></div>
+  <div id="filterButtons">
+    <p>Filtros</p>
+    <p><select id="movieyears" class="filters">
+        <option id="year" value="releaseyear">Año de lanzamiento</option>
+        <option id="80" value="80s">1980 a 1989</option>
+        <option id="90" value="90s">1990 a 1999</option>
+        <option id="20" value="00s">2000 a la actualidad</option>
+      </select></p>
+    <p><select id="filmdirector" class="filters">
+        <option id="year" value="moviedirector">Director</option>
+        <option id="Hayao" value="Hayao">Hayao Miyazaki</option>
+        <option id="Isao" value="Isao">Isao Takahata</option>
+        <option id="Yoshifumi" value="Yoshifumi">Yoshifumi Kondō</option>
+        <option id="Goro" value="Goro">Gorō Miyazaki</option>
+        <option id="Hiromasa" value="Hiromasa">Hiromasa Yonebayashi</option>
+      </select></p>
+      <button type="button" id="resetfilters">Limpiar filtros</button>
+      <div id="root"></div>
+    </div>
   <script src="main.js" type="module"></script>
   <footer></footer>
 </body>
