funciones en data.js

--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,11 @@
       </select></p>
     <p><select id="filmdirector" class="filters">
         <option id="year" value="moviedirector">Director</option>
-        <option id="Hayao" value="Hayao">Hayao Miyazaki</option>
-        <option id="Isao" value="Isao">Isao Takahata</option>
-        <option id="Yoshifumi" value="Yoshifumi">Yoshifumi Kondō</option>
-        <option id="Goro" value="Goro">Gorō Miyazaki</option>
-        <option id="Hiromasa" value="Hiromasa">Hiromasa Yonebayashi</option>
+        <option id="Hayao" value="Hayao Miyazaki">Hayao Miyazaki</option>
+        <option id="Isao" value="Isao Takahata">Isao Takahata</option>
+        <option id="Yoshifumi" value="Yoshifumi Kondō">Yoshifumi Kondō</option>
+        <option id="Goro" value="Gorō Miyazaki">Gorō Miyazaki</option>
+        <option id="Hiromasa" value="Hiromasa Yonebayashi">Hiromasa Yonebayashi</option>
       </select></p>
       <button type="button" id="resetfilters">Limpiar filtros</button>
       <div id="root"></div>
