Limpieza general, reformulación y escritura de filtrado global (en progreso)

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
         <option id="year" value="releaseyear">Año de lanzamiento</option>
         <option id="80" value="80s">1980 a 1989</option>
         <option id="90" value="90s">1990 a 1999</option>
-        <option id="20" value="00s">2000 a la actualidad</option>
+        <option id="20" value="00s">2000 a 2009</option>
+        <option id="21" value="10s">2010 a la actualidad</option>
       </select></p>
     <p><select id="filmdirector" class="filters">
         <option id="year" value="moviedirector">Director</option>
