Función de ordenado y filtros generales.

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,11 @@
   </header>
   <div id="sortBy">
     <select id="sortingMenu">
-      <option id="blankId" value="intro">Ordenar por:</option>
+      <option id="blankId" value="notSorted">Ordenar por:</option>
       <option id="aToZ" value="AZ">Ascendente: de la A a la Z</option>
       <option id="zToA" value="ZA">Descendente: de la Z a la A</option>
+      <option id="rTminus" value="minus">De menor a mayor puntuación</option>
+      <option id="rTplus" value="plus">De mayor a menor puntuación</option>
     </select>
   </div>
   <div id="filterButtons">
