--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   </div>
   <div id="completeRoot">
     <div id="filtersRoot">
-      <p>Filtros</p>
+      <p>Filtrar por</p>
       <p><select id="movieyears" class="filters">
           <option id="year" value="releaseyear">Año de lanzamiento</option>
           <option id="80" value="80s">1980 a 1989</option>
