--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,9 @@
           <option id="21" value="10s">2010 a la actualidad</option>
         </select></p>
       <p><select id="filmdirector" class="filters">
-          <option id="year" value="moviedirector">Director</option>
+          <option id="director" value="moviedirector">Director</option>
           <option id="Hayao" value="Hayao Miyazaki">Hayao Miyazaki</option>
+          <option id="Hiroyuki" value="Hiroyuki Morita">Hiroyuki Morita</option>
           <option id="Isao" value="Isao Takahata">Isao Takahata</option>
           <option id="Yoshifumi" value="Yoshifumi Kondō">Yoshifumi Kondō</option>
           <option id="Goro" value="Gorō Miyazaki">Gorō Miyazaki</option>
