--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Studio Ghibli Collection</title>
@@ -10,10 +11,11 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,700&display=swap"
     rel="stylesheet">
 </head>
+
 <body>
   <header>
     <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
-    <input type="text" id="searchbox" placeholder="Buscar películas">
+    <button id="funFacts">Datos curiosos</button>
   </header>
   <div id="sortBy">
     <select id="sortingMenu">
@@ -27,15 +29,15 @@
   <div id="completeRoot">
     <div id="filtersRoot">
       <p>Filtrar por</p>
-      <p><select id="movieyears" class="filters" value = "releaseyear">
+      <p><select id="movieyears" class="filters" value="releaseyear">
           <option id="year" value="releaseyear">Año de lanzamiento</option>
           <option id="80" value="80s">1980 a 1989</option>
           <option id="90" value="90s">1990 a 1999</option>
           <option id="20" value="00s">2000 a 2009</option>
           <option id="21" value="10s">2010 a la actualidad</option>
         </select></p>
-      <p><select id="filmdirector" class="filters" value = "moviedirector">
-        <!-- Aqui el ID Era year -->
+      <p><select id="filmdirector" class="filters" value="moviedirector">
+          <!-- Aqui el ID Era year -->
           <option id="director" value="moviedirector">Director</option>
           <option id="Hayao" value="Hayao Miyazaki">Hayao Miyazaki</option>
           <option id="Isao" value="Isao Takahata">Isao Takahata</option>
@@ -47,7 +49,14 @@
     </div>
     <div id="root"></div>
   </div>
+  <div id="moreInfo" style="display:none;">
+    <img src="https://media.giphy.com/media/xY7HprawfZGUxVAdGY/giphy.gif">
+    <div id="textGhibli">
+    </div>
+    <img src="https://media.giphy.com/media/0CtSrP8NAt0Htxc1sz/giphy.gif">
+  </div>
   <script src="main.js" type="module"></script>
-  <footer></footer>
+  <footer>hahahjsaas</footer>
 </body>
+
 </html>
