"estilos a header y pruebas"

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
-    <button id="funFacts">Datos curiosos</button>
+    <button id="funFacts"> 🤓 Datos curiosos</button>
   </header>
   <div id="sortBy">
     <select id="sortingMenu">
