--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Studio Ghibli Collection</title>
@@ -10,10 +11,11 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,700&display=swap"
     rel="stylesheet">
 </head>
+
 <body>
   <header>
     <img src="https://i.postimg.cc/DydYXxdd/glogo.png" id="ghilogo">
-    <input type="text" id="searchbox" placeholder="Buscar películas">
+    <button id="funFacts">Datos curiosos</button>
   </header>
   <div id="sortBy">
     <select id="sortingMenu">
@@ -47,7 +49,13 @@
     </div>
     <div id="root"></div>
   </div>
+  <div id="moreInfo" style="display:none;">
+    <img src="https://media.giphy.com/media/xY7HprawfZGUxVAdGY/giphy.gif">
+    <div id="textGhibli"></div>
+    <img src="https://media.giphy.com/media/0CtSrP8NAt0Htxc1sz/giphy.gif">
+  </div>
   <script src="main.js" type="module"></script>
-  <footer></footer>
+  <footer>Holis 2022.</footer>
 </body>
+
 </html>
