Fondo nuevo y botón.

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
     <img src="https://media.giphy.com/media/0CtSrP8NAt0Htxc1sz/giphy.gif">
   </div>
   <script src="main.js" type="module"></script>
-  <footer>Holis 2022.</footer>
+  <footer>© 2005-2022 STUDIO GHIBLI Inc. Proyecto elaborado para Laboratoria por Marlene Saucedo y Fernanda Alvarez.</footer>
 </body>
 
 </html>
