"Modificacion de html para despliegue en gh-pages"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Studio Ghibli Collection</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./src/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -54,7 +54,7 @@
     <div id="textGhibli"></div>
     <img src="https://media.giphy.com/media/0CtSrP8NAt0Htxc1sz/giphy.gif">
   </div>
-  <script src="main.js" type="module"></script>
+  <script src="./src/main.js" type="module"></script>
   <footer>© 2005-2022 STUDIO GHIBLI Inc. Proyecto elaborado para Laboratoria por Marlene Saucedo y Fernanda Alvarez.</footer>
 </body>
 
